--- a/webpageTemplate/index.html
+++ b/webpageTemplate/index.html
@@ -14,9 +14,10 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="logo"><img src="assets/logo.png" alt="Techworks Logo" style="width: 200px;"></div>
+        <div class="menu-toggle">☰</div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
-            <li><a href="#features">Features</a></li>
+            <li><a href="#product-details">Features</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
